# HandlingGapsCodingChallenge

./: hampel_filter.py  heating_temperature_anomaly_detection.ipynb  pyproject.toml  requirements.txt
