[tool.poetry]
name = "Zeiss Data Scientist Coding Challenge"
version = "0.1.0"
description = ""
authors = ["BdeGraaff <BdeGraaff@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
statsmodels = "^0.13.2"
matplotlib = "^3.6.0"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"
ipykernel = "^6.16.2"
plotly = "^5.11.0"
nbformat = "^5.7.0"
keras = "^2.10.0"
tensorflow = "^2.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.2.0"
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
